feat: refractor, optimize, new features