@@ -1,14 +1,14 @@
 package org.practice.seeyaa.service.impl;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.practice.seeyaa.enums.FileType;
 import org.practice.seeyaa.models.dto.FileMetadataDto;
 import org.practice.seeyaa.models.entity.Files;
-import org.practice.seeyaa.models.entity.Letter;
 import org.practice.seeyaa.repo.FilesRepo;
 import org.practice.seeyaa.repo.LetterRepo;
 import org.practice.seeyaa.service.StorageService;
-import org.practice.seeyaa.util.mappers.FileMapper;
+import org.practice.seeyaa.mappers.FileMapper;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,24 +18,19 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class StorageServiceImpl implements StorageService {
     private final FilesRepo filesRepo;
     private final LetterRepo letterRepo;
-
-    public StorageServiceImpl(FilesRepo filesRepo, LetterRepo letterRepo) {
-        this.filesRepo = filesRepo;
-        this.letterRepo = letterRepo;
-    }
 
     @Override
     @PreAuthorize("hasRole('ROLE_USER')")
     public void uploadFile(MultipartFile file, String letterId) {
         try {
-            Letter letter = letterRepo.findById(letterId)
+            final var letter = letterRepo.findById(letterId)
                     .orElseThrow(() -> new RuntimeException("Letter not found with id: " + letterId));
 
             byte[] fileData;
@@ -49,8 +44,7 @@ public class StorageServiceImpl implements StorageService {
                     .size(file.getSize())
                     .data(fileData)
                     .letter(letter)
-                    .build()
-            );
+                    .build());
         } catch (IOException e) {
             throw new RuntimeException("Failed to upload file", e);
         }
@@ -60,9 +54,9 @@ public class StorageServiceImpl implements StorageService {
     @PreAuthorize("hasRole('ROLE_USER')")
     public InputStream downloadFile(String fileId) {
         Integer id = Integer.parseInt(fileId);
-        Files file = filesRepo.findById(id)
+        return filesRepo.findById(id)
+                .map(file -> new ByteArrayInputStream(file.getData()))
                 .orElseThrow(() -> new RuntimeException("File not found with id: " + fileId));
-        return new ByteArrayInputStream(file.getData());
     }
 
     @Override
@@ -80,7 +74,7 @@ public class StorageServiceImpl implements StorageService {
         return filesRepo.findAllByLetter_Id(letterId)
                 .stream()
                 .map(FileMapper.INSTANCE::toFileMetadataDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
